--- a/sniffer-m3u8.2
+++ b/sniffer-m3u8.2
@@ -135,10 +135,46 @@
       "Episode:", record.episodeNumber ?? record.episodeDisplay
     );
 
+    // Update count display
+    updateCountDisplay();
+
     // Start auto export timer
     if (AUTO_EXPORT_SETTINGS.enabled && window.m3u8Store.length >= AUTO_EXPORT_SETTINGS.minDataCount) {
       startAutoExportTimer();
     }
+  }
+
+  // ---------- COUNT DISPLAY ----------
+  function updateCountDisplay() {
+    let countDisplay = document.getElementById('m3u8-count-display');
+    
+    if (!countDisplay) {
+      countDisplay = document.createElement('div');
+      countDisplay.id = 'm3u8-count-display';
+      countDisplay.style.cssText = `
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        z-index: 99998;
+        background: #2c3e50;
+        color: white;
+        padding: 8px 12px;
+        border-radius: 5px;
+        font-family: Arial, sans-serif;
+        font-size: 12px;
+        font-weight: bold;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+      `;
+      document.body.appendChild(countDisplay);
+    }
+    
+    countDisplay.textContent = `📊 ${window.m3u8Store.length} Data M3U8`;
+    
+    // Animasi ketika data bertambah
+    countDisplay.style.transform = 'scale(1.1)';
+    setTimeout(() => {
+      countDisplay.style.transform = 'scale(1)';
+    }, 300);
   }
 
   // ---------- AUTO EXPORT FEATURE ----------
@@ -160,71 +196,83 @@
     const filename = `${defaultFilename}.json`;
     
     // Buat custom prompt yang lebih user friendly
-    const promptResult = createCustomPrompt(filename);
+    const promptResult = await createCustomPrompt(filename);
     
-    if (promptResult) {
-      await exportAndExit(promptResult.filename);
+    if (promptResult && promptResult.action === 'export') {
+      await exportAndExit(promptResult.filename, promptResult.closeTab);
     }
   }
 
   function createCustomPrompt(defaultFilename) {
-    // Create overlay
-    const overlay = document.createElement('div');
-    overlay.style.cssText = `
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.7);
-      z-index: 1000000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif;
-    `;
-
-    // Create dialog
-    const dialog = document.createElement('div');
-    dialog.style.cssText = `
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-      width: 400px;
-      max-width: 90%;
-    `;
-
-    dialog.innerHTML = `
-      <h3 style="margin: 0 0 15px 0; color: #333;">Export M3U8 Data</h3>
-      <p style="margin: 0 0 10px 0; color: #666; font-size: 14px;">
-        ${window.m3u8Store.length} data M3U8 berhasil ditangkap.
-      </p>
-      <div style="margin: 15px 0;">
-        <label style="display: block; margin-bottom: 5px; font-weight: bold; color: #333;">Nama File:</label>
-        <input type="text" 
-               id="filenameInput" 
-               value="${defaultFilename}" 
-               style="width: 100%; padding: 8px; border: 2px solid #ddd; border-radius: 5px; font-size: 14px;"
-               onfocus="this.select()">
-      </div>
-      <div style="display: flex; gap: 10px; justify-content: flex-end;">
-        <button id="cancelBtn" style="padding: 8px 16px; border: 1px solid #ddd; background: #f5f5f5; border-radius: 5px; cursor: pointer;">Batal</button>
-        <button id="exportBtn" style="padding: 8px 16px; border: none; background: #2ecc71; color: white; border-radius: 5px; cursor: pointer; font-weight: bold;">Export & Exit</button>
-      </div>
-    `;
-
-    overlay.appendChild(dialog);
-    document.body.appendChild(overlay);
-
-    // Focus input dan select semua text
-    const input = dialog.querySelector('#filenameInput');
-    input.focus();
-    input.select();
-
     return new Promise((resolve) => {
+      // Create overlay
+      const overlay = document.createElement('div');
+      overlay.style.cssText = `
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.7);
+        z-index: 1000000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: Arial, sans-serif;
+      `;
+
+      // Create dialog
+      const dialog = document.createElement('div');
+      dialog.style.cssText = `
+        background: white;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+        width: 400px;
+        max-width: 90%;
+      `;
+
+      dialog.innerHTML = `
+        <h3 style="margin: 0 0 15px 0; color: #333;">Export M3U8 Data</h3>
+        <div style="background: #f8f9fa; padding: 10px; border-radius: 5px; margin-bottom: 15px;">
+          <div style="display: flex; justify-content: space-between; margin-bottom: 5px;">
+            <span style="color: #666;">Data Ditangkap:</span>
+            <span style="font-weight: bold; color: #2c3e50;">${window.m3u8Store.length} M3U8 URLs</span>
+          </div>
+          <div style="display: flex; justify-content: space-between;">
+            <span style="color: #666;">File JSON:</span>
+            <span style="font-weight: bold; color: #2c3e50;">${defaultFilename}.json</span>
+          </div>
+        </div>
+        <div style="margin: 15px 0;">
+          <label style="display: block; margin-bottom: 5px; font-weight: bold; color: #333;">Edit Nama File:</label>
+          <input type="text" 
+                 id="filenameInput" 
+                 value="${defaultFilename}" 
+                 style="width: 100%; padding: 8px; border: 2px solid #ddd; border-radius: 5px; font-size: 14px;"
+                 onfocus="this.select()">
+        </div>
+        <div style="margin: 15px 0; display: flex; align-items: center;">
+          <input type="checkbox" id="closeTabCheckbox" checked style="margin-right: 8px;">
+          <label for="closeTabCheckbox" style="color: #333; font-size: 14px;">Tutup tab setelah export</label>
+        </div>
+        <div style="display: flex; gap: 10px; justify-content: flex-end;">
+          <button id="cancelBtn" style="padding: 8px 16px; border: 1px solid #ddd; background: #f5f5f5; border-radius: 5px; cursor: pointer;">Batal</button>
+          <button id="exportBtn" style="padding: 8px 16px; border: none; background: #2ecc71; color: white; border-radius: 5px; cursor: pointer; font-weight: bold;">Export & Tutup Tab</button>
+        </div>
+      `;
+
+      overlay.appendChild(dialog);
+      document.body.appendChild(overlay);
+
+      // Focus input dan select semua text
+      const input = dialog.querySelector('#filenameInput');
+      input.focus();
+      input.select();
+
       const exportBtn = dialog.querySelector('#exportBtn');
       const cancelBtn = dialog.querySelector('#cancelBtn');
+      const closeTabCheckbox = dialog.querySelector('#closeTabCheckbox');
 
       exportBtn.onclick = () => {
         let filename = input.value.trim();
@@ -235,12 +283,21 @@
           filename += '.json';
         }
         document.body.removeChild(overlay);
-        resolve({ filename: filename, action: 'export' });
+        resolve({ 
+          filename: filename, 
+          action: 'export',
+          closeTab: closeTabCheckbox.checked
+        });
       };
 
       cancelBtn.onclick = () => {
         document.body.removeChild(overlay);
-        resolve(null);
+        resolve({ action: 'cancel' });
+      };
+
+      // Update button text berdasarkan checkbox
+      closeTabCheckbox.onchange = () => {
+        exportBtn.textContent = closeTabCheckbox.checked ? 'Export & Tutup Tab' : 'Export Saja';
       };
 
       // Enter key to export
@@ -262,7 +319,7 @@
     });
   }
 
-  async function exportAndExit(filename) {
+  async function exportAndExit(filename, closeTab = true) {
     // Tandai data yang diexport
     const unexportedData = window.m3u8Store.filter(item => !item.exported);
     unexportedData.forEach(item => item.exported = true);
@@ -277,18 +334,20 @@
 
     console.log(`%c[Export] ✅ ${unexportedData.length} data diexport ke ${filename}`, "color: lime;");
 
-    // Tunggu sebentar lalu close tab
-    setTimeout(() => {
-      try {
-        window.close();
-      } catch (e) {
+    // Close tab hanya jika checkbox dicentang
+    if (closeTab) {
+      setTimeout(() => {
         try {
-          window.open('', '_self')?.close();
-        } catch (e2) {
-          window.location.href = 'about:blank';
+          window.close();
+        } catch (e) {
+          try {
+            window.open('', '_self')?.close();
+          } catch (e2) {
+            window.location.href = 'about:blank';
+          }
         }
-      }
-    }, 500);
+      }, 500);
+    }
   }
 
   // ---------- HOOK FETCH & XHR ----------
@@ -342,6 +401,7 @@
 
   // Init
   createSimpleUI();
+  updateCountDisplay(); // Initialize count display
   console.log("%c[OK] M3U8 Sniffer aktif. Auto export dalam 2 detik setelah data stabil.", "color: orange;");
 
 })();
